# microarray-workstation

./: .gitignore  AI_DEV_SPEC.yaml  README.md  pyproject.toml
src/microarray_workstation/: __init__.py  app.py  cli.py
src/microarray_workstation/analysis/: ai_classifier.py  image_loader.py  pipeline.py  qc.py  quantification.py  spot_detector.py
src/microarray_workstation/domain/: models.py
src/microarray_workstation/integration/: lab_interface_client.py  lims_client.py
src/microarray_workstation/io/: exporters.py
src/microarray_workstation/rules/: interpreter.py
src/microarray_workstation/templates/: default_template.yaml
src/microarray_workstation/ui/: main_window.py
src/microarray_workstation/workflows/: analysis_workflow.py
tests/: test_ai_and_batch.py  test_image_format_support.py  test_lab_interface_client.py  test_lims_batch_submit.py  test_pipeline.py  test_qc_and_shift.py
